hopefully fixed viewport size on safari

--- a/www/sreen_size.css
+++ b/www/sreen_size.css
@@ -74,7 +74,8 @@ small.phone_popup{
       display: none;
   }
   #map_container {
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
   }
   #results_page{
     padding:0;
